Fixed Spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,9 @@ a {
 .index-main h1 {
     color: #f5f5f5;
     border-bottom: 1px solid #EC4899;
-    font-size: 4em;
+    border-left: 4px solid #EC4899;
+    padding-left: 0.2em;
+    font-size: 3em;
     font-weight: lighter;
 }
 
@@ -471,7 +473,7 @@ a {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 350px;
+    height: 15em;
 }
 
 .activate-progress-button {
@@ -549,8 +551,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 350px;
-    
+    height: 15em;
 }
 
 .build-modal-button {
@@ -612,6 +613,10 @@ a {
 
     .nav {
         width: 30%;
+    }
+
+    .index-main h1 {
+        font-size: 4em;
     }
 
     .content-container {
@@ -682,6 +687,10 @@ a {
         margin-right: 1.25em;
     }
 
+    .progress-bar-container {
+        height: 15em;
+    }
+
     .progress-terminal {
         flex-direction: row;
         justify-content: center;
@@ -708,6 +717,10 @@ a {
 
     .progress-button {
         margin: 30px;
+    }
+
+    .build-modal-button-container {
+        height: 20em;
     }
 }
 
